<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">mobileAndroid</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="internet">Internet/Net.Location</string>
    <string name="gps">GPS</string>
    <string name="work">Work</string>
    <string name="connection">Connection</string>
    <string name="employee">Employee</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="current_salary">Current Salary</string>
    <string name="total_workhour">Total Work Hour</string>
    <string name="no_data">NO DATA</string>
    <string name="refresh">Refresh</string>
    <string name="salary">Salary</string>
    <string name="geocoordinates">Geo Coordinates</string>
    <string name="money_per_hour">Money per Hour</string>
    <string name="import_export">Import/Export</string>
    <string name="select_employee">Select Employee</string>
    <string name="longitude_nw">Longitude Northwest</string>
    <string name="latitude_nw">Latitude Northwest</string>
    <string name="longitude_se">Longitude Southeast</string>
    <string name="latitude_se">Latitude Southeast</string>
    <string name="total_salary">Total Salary</string>
    <string name="company">Company</string>
    <string name="deleteall">Delete ALL</string>
    <string name="import_">Import</string>
    <string name="export">Export</string>
    <string name="exportsample">Export Sample</string>
    <string name="exportto">Export to: </string>    
    <string name="work_mode">Work Mode</string>
    <string name="settings">Settings</string>
    <string name="mode_settings">Mode Settings</string>
    <string name="show_my_position">show my position</string>
    <string name="status">Status</string>
    <string name="notaprofile">Not a profile</string>
    <string name="pleasefinishatfirsttheworkmode">Please finish at first the Work-Mode</string>
    <string name="noprofiletoexport">no profile to export</string>
    <string name="successful">successful</string>
</resources>