<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <LinearLayout 
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"> 
       
	   <TableLayout 
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:stretchColumns="1"
	       android:padding="5dp" >
	
	       <TableRow android:paddingBottom="5dp">
	           
	           <TextView
	               android:text="@string/connection"
	               android:textAppearance="?android:attr/textAppearanceLarge" />
	           
			    <View
			        android:layout_height="2dip"
			        android:background="#FF909090"
			        android:layout_marginLeft="10dp"
			        android:layout_gravity="center_vertical" />
			    
	       </TableRow>
	
	       
	       <TableRow android:paddingLeft="15dp">

	           <TextView android:text="@string/internet" />
	
	           <LinearLayout 
	               android:layout_gravity="center"
	               android:orientation="horizontal">
		           <TextView
		               android:id="@+id/tv_internet_status"
		               android:layout_height="wrap_content"
		               android:layout_width="wrap_content"
		               android:gravity="right"/>
		           <TextView 
		               android:text="/"
		               android:layout_height="wrap_content"
		               android:layout_width="wrap_content"
		               android:gravity="center"/>
		           
		           <TextView
		               android:id="@+id/tv_nlocation_status"
		               android:layout_height="wrap_content"
		               android:layout_width="wrap_content"
		               android:gravity="left"/>
	           </LinearLayout>
	
	       </TableRow>
	
	       
	       <TableRow android:paddingLeft="15dp">
	          
	           <TextView android:text="@string/gps" />
	
	           <TextView
	               android:id="@+id/tv_gps_status"
	               android:gravity="center"/>
	           
	       </TableRow>
	       
	
	       <TableRow
	           android:paddingLeft="15dp"
	           android:paddingBottom="10dp">
	
	           <TextView android:text="@string/work" />
	           
	           <TextView
	               android:id="@+id/tv_work_status"
	               android:gravity="center"/>
	
	       </TableRow>
	       
	       
	       <TableRow android:padding="5dp">
	
	           <TextView
	               android:text="@string/employee"
	               android:textAppearance="?android:attr/textAppearanceLarge" />
	
			   <View
			        android:layout_height="2dip"
			        android:layout_gravity="center_vertical"
			        android:layout_marginLeft="10dp"
			        android:background="#FF909090" />
			   
	       </TableRow>
	
	       
	       <TableRow android:paddingLeft="15dp">
	
	           <TextView android:text="@string/name" />
	           
	           <TextView 
	               android:id="@+id/tv_name_status"
	               android:text="@string/no_data"
	               android:gravity="center"/>
	
	       </TableRow>
	
	       
	       <TableRow android:paddingLeft="15dp">
	
	           <TextView android:text="@string/address" />
	           
	           <TextView 
	               android:id="@+id/tv_address_status"
	               android:text="@string/no_data"
	               android:gravity="center"/>
	
	       </TableRow>
	
	       <TableRow android:paddingLeft="15dp">
	
	           <TextView android:text="@string/current_salary" />
	           
	           <TextView 
	               android:id="@+id/tv_current_salary_status"
	               android:text="@string/no_data"
	               android:gravity="center"/>
	
	       </TableRow>
	
	       <TableRow android:paddingLeft="15dp">
	
	           <TextView android:text="@string/total_workhour" />
	           
	           <TextView
	               android:id="@+id/tv_total_workhour_status"
	               android:text="@string/no_data"
	               android:gravity="center"/>
	
	       </TableRow>
	
	       <LinearLayout
	           android:paddingTop="10dp">
	
	           <Button
	               android:id="@+id/bt_refresh_status"
	               android:layout_width="match_parent"
	               android:layout_height="match_parent"
	               android:onClick="onButtonClick"
	               android:text="@string/refresh" />
	
	       </LinearLayout>
	
	   </TableLayout>
	   <LinearLayout 
	       android:layout_height="wrap_content"
	       android:layout_width="fill_parent"
	       android:orientation="vertical"
	       android:padding="5dp" >
	       
	       <TextView
	           android:layout_height="wrap_content"
	           android:layout_width="wrap_content"
	           android:text="@string/show_my_position"
	           android:layout_gravity="center_horizontal"
	           android:padding="1dp" />
	       
	       <ImageButton
	           android:id="@+id/ibt_map_status"
	           android:src="@android:drawable/ic_menu_mapmode"
	           android:layout_height="wrap_content"
	           android:layout_width="wrap_content"
	           android:onClick="onButtonClick"
	           android:layout_gravity="center_horizontal"/>
	       
	   </LinearLayout>	   
	   
	</LinearLayout>
</ScrollView>