<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingRight="3dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:text="@string/import_export" />
             
                <Button
                    android:id="@+id/bt_import_employee"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:onClick="onButtonClick"
                    android:text="@string/import_" />
                    
                <Button
                    android:id="@+id/bt_export_employee"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:onClick="onButtonClick"
                    android:text="@string/export" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:orientation="horizontal"
                android:weightSum="1" >
            
                <Button
                    android:id="@+id/bt_export_sample"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:onClick="onButtonClick"
                    android:text="@string/exportsample" />
                
                <Button
                    android:id="@+id/bt_delete_all"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:onClick="onButtonClick"
                    android:text="@string/deleteall" />
            </LinearLayout>    
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:text="@string/select_employee" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:orientation="vertical" >

                    <Spinner
                        android:id="@+id/sp_employeelist_profile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:prompt="@string/employee" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

       <TableLayout
            android:id="@+id/tl_profile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingRight="3dp"
            android:stretchColumns="1" >

            <TableRow android:paddingBottom="5dp" >

                <TextView
                    android:text="@string/employee"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>

            <TableRow
                android:paddingLeft="10dp"
                android:paddingTop="5dp" >

                <TextView
                    android:text="@string/employee"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <View
                    android:layout_height="2dip"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="3dp"
                    android:background="#FF909090" />
            </TableRow>

            <TableRow android:paddingLeft="15dp" >

                <TextView android:text="@string/company" />

                <TextView
                    android:id="@+id/tv_company_profile"
                    android:gravity="center"
                    android:text="@string/no_data" />
            </TableRow>
            
            <TableRow android:paddingLeft="15dp" >

                <TextView android:text="@string/name" />

                <TextView
                    android:id="@+id/tv_name_profile"
                    android:gravity="center"
                    android:text="@string/no_data" />
            </TableRow>

            <TableRow android:paddingLeft="15dp" >

                <TextView android:text="@string/address" />

                <TextView
                    android:id="@+id/tv_address_profile"
                    android:gravity="center"
                    android:text="@string/no_data" />
            </TableRow>

            <TableRow
                android:paddingLeft="10dp"
                android:paddingTop="5dp" >

                <TextView
                    android:text="@string/salary"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <View
                    android:layout_height="2dip"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="3dp"
                    android:background="#FF909090" />
            </TableRow>

            <TableRow android:paddingLeft="15dp" >

                <TextView android:text="@string/money_per_hour" />

                <TextView
                    android:id="@+id/tv_money_per_hour_profile"
                    android:gravity="center"
                    android:text="@string/no_data" />
            </TableRow>

            <TableRow
                android:paddingLeft="10dp"
                android:paddingTop="5dp" >

                <TextView
                    android:text="@string/geocoordinates"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <View
                    android:layout_height="2dip"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="3dp"
                    android:background="#FF909090" />
            </TableRow>

            <TableRow android:paddingLeft="15dp" >

                <TextView android:text="@string/longitude_nw" />

                <TextView
                    android:id="@+id/tv_longitude_nw_profile"
                    android:gravity="center"
                    android:text="@string/no_data" />
            </TableRow>

            <TableRow android:paddingLeft="15dp" >

                <TextView android:text="@string/latitude_nw" />

                <TextView
                    android:id="@+id/tv_latitude_nw_profile"
                    android:gravity="center"
                    android:text="@string/no_data" />
            </TableRow>

            <TableRow android:paddingLeft="15dp" >

                <TextView android:text="@string/longitude_se" />

                <TextView
                    android:id="@+id/tv_longitude_se_profile"
                    android:gravity="center"
                    android:text="@string/no_data" />
            </TableRow>

            <TableRow android:paddingLeft="15dp" >

                <TextView android:text="@string/latitude_se" />

                <TextView
                    android:id="@+id/tv_latitude_se_profile"
                    android:gravity="center"
                    android:text="@string/no_data" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>