<?xml version="1.0" encoding="utf-8"?> 

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin" >

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView 
            android:text="@string/app_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
			android:textColor="@color/white"
			android:background="@color/transparent_black"
            android:gravity="center"
            android:layout_weight="1"
            />
        
    </LinearLayout>
    
    <LinearLayout
        android:baselineAligned="false"
	 	android:layout_width="match_parent" 
		android:layout_height="match_parent"
		android:orientation="horizontal"
		android:weightSum="1" >
        
	    <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:orientation="vertical"
			android:background="@color/transparent_black"
			android:layout_weight="0.5"
	        android:weightSum="1" >
	        
	
	
	        <ImageButton
	            android:id="@+id/ibt_settings_widget"
	            android:src="@android:drawable/ic_menu_preferences"
	            android:contentDescription="@string/settings"
	            android:layout_width="match_parent"
	            android:layout_height="0dp"
	            android:background="@color/transparent"
	            android:layout_weight="0.5"
	            android:layout_gravity="center"  />
	
	
	        <TextView
	            android:text="@string/status"
	            android:layout_width="match_parent"
	            android:layout_height="0dp"
	            android:background="@color/transparent"
	            android:layout_gravity="center|bottom"
	            android:gravity="center"
	            android:layout_weight="0.5"
	            android:textColor="@color/white" />
		    
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:orientation="vertical"
			android:background="@color/transparent_black"
			android:layout_weight="0.5" >
	        
	        <TextView
	            android:id="@+id/tv_work_widget"
	            android:text="@string/work_mode"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:textColor="@color/white"
	            android:gravity="center"
	            />
	        
	    </LinearLayout>
        
    </LinearLayout>
    
    
	
</LinearLayout>